--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,17 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<!-- <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} /> -->
+		<!-- Global Metadata -->
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="generator" content={Astro.generator} />
 	</head>
 	<body>
 		<main class="h-screen flex items-center justify-center bg-secondary">
-			<h1 class="text-4xl font-bold">Coming Soon!</h1>
+            <div class="text-4xl font-bold text-center">
+                <p class="mb-4">🚧</p>
+                <h1>Coming Soon!</h1>
+            </div>
 		</main>
 	</body>
 </html>
