--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,11 +11,16 @@
         <meta name="generator" content={Astro.generator} />
         <!-- Google Tag Manager -->
         <script>
-        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-            })(window,document,'script','dataLayer','GTM-KGRW3QLF');
+            (function(w: Window, d: Document, s: string, l: string, i: string){
+                const dataLayer = (w[l] = (w[l] || []) as { [key: string]: any }[]);
+                dataLayer.push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
+                const f = d.getElementsByTagName(s)[0];
+                const j = d.createElement(s) as HTMLScriptElement;
+                const dl = l !== 'dataLayer' ? '&l=' + l : '';
+                j.async = true;
+                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                f.parentNode.insertBefore(j, f);
+            })(window, document, 'script', 'dataLayer', 'GTM-KGRW3QLF');
         </script>
         <!-- End Google Tag Manager -->
 	</head>
