Scaffold the html structure

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,16 +25,83 @@
         <!-- End Google Tag Manager -->
 	</head>
 	<body>
-		<main class="h-screen flex items-center justify-center bg-secondary">
-            <div class="text-4xl font-bold text-center">
-                <p class="mb-4">🚧</p>
-                <h1>Coming Soon!</h1>
+		<header>
+            <h1 class="capitalize">Web development with results at the forefront</h1>
+            <h2>We deliver clear and measurable projects where quality is more important than hours.</h2>
+            <div>
+                <button class="btn-primary">Let's talk</button>
+                <button>View Study Cases</button>
             </div>
-		</main>
-        <!-- Google Tag Manager (noscript) -->
-        <noscript>
-            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGRW3QLF" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-        </noscript>
-        <!-- End Google Tag Manager (noscript) -->
+        </header>
+
+        <!-- WHO WE ARE -->
+        <div>
+            <h3 class="uppercase">WHAT WE DO</h3>
+            <h2>We are a web development agency specializing in delivering the best user experience through our leading front-end expertise.</h2>
+            <p>Our team is made up exclusively of senior professionals, each with a proven track record of success in their respective fields. We follow an agile model, which means that tasks are estimated in advance, and the project has clearly defined milestones. This approach ensures transparency for our clients and allows our professionals to work efficiently.</p>
+            <button class="btn-primary">Let's talk</button>
+        </div>
+
+        <!-- SERVICES -->
+        <div>
+            <div>
+                <div>🌏</div>
+                <div>Web Application Development</div>
+                <p>We build highly efficient, scalable and secure web applications for businesses of all sizes. From prototypes to finished products.</p>
+            </div>
+            <div>
+                <div>🛟</div>
+                <div>Optimization and enhancement of existing solutions</div>
+                <p>If you already have a web application but it requires performance, security or new functionality improvements, our team will audit and suggest specific steps.</p>
+            </div>
+            <div>
+                <div>🚀</div>
+                <div>AI Implementation</div>
+                <p>We help you integrate the latest technologies and approaches into your existing products, whether you're migrating to a new platform, modernizing your architecture, or automating processes.</p>
+            </div>
+            <div>
+                <div>🔎</div>
+                <div>Auditing and consulting: </div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam voluptate praesentium tenetur earum repellendus! Dicta culpa consequuntur saepe quibusdam labore, est ex ducimus tempore, quos illum officiis, pariatur ea placeat.</p>
+            </div>
+        </div>
+
+        <!-- HOW WE WORK -->
+        <div>
+            <h3 class="uppercase">HOW WE WORK</h3>
+            <div>
+                <div>1️⃣</div>
+                <div>Brief</div>
+                <p>Every project starts with a clear brief and definition of tasks.</p>
+            </div>
+            <div>
+                <div>2️⃣</div>
+                <div>Estimate</div>
+                <p>We estimate the scope of work and enter into a contract with fixed deadlines and deliverables.</p>
+            </div>
+            <div>
+                <div>3️⃣</div>
+                <div>Realization</div>
+                <p>No vague deadlines or inflated hours - just the results you need.</p>
+            </div>
+            <button class="btn-primary">Let's talk</button>
+        </div>
+
+        <!-- STUDY CASES -->
+        <div>
+            <h3 class="uppercase">Study cases</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero incidunt consequatur hic! Est deserunt ipsum laboriosam omnis aliquam assumenda vero autem quam libero debitis eius molestiae natus dolores, voluptatum voluptas!</p>
+            <button class="btn-primary">Read blog</button>
+        </div>
+
+        <!-- FOOTER -->
+        <footer>
+            
+            <!-- Google Tag Manager (noscript) -->
+            <noscript>
+                <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGRW3QLF" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+            </noscript>
+            <!-- End Google Tag Manager (noscript) -->
+        </footer>
 	</body>
 </html>
