--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@
 	</head>
 	<body class="font-pt-serif">
 		<header>
-        </header>
+    </header>
         
         <!-- HERO -->
         <section class="pt-24 md:mt-0 md:h-screen flex flex-col justify-center text-center md:text-left md:flex-row md:justify-between md:items-center lg:px-48 md:px-12 px-4 bg-secondary">
@@ -67,7 +67,10 @@
                 <div class="lg:w-2/5 lg:pr-24 md:mb-0 flex flex-col items-start mb-4 text-left">
                   <!-- <h3 class="text-xl font-bold mb-6 text-indigo-500">WHAT WE DO</h3> -->
                   <h2 class="text-gray-900 md:text-5xl lg:text-7xl mb-8 text-3xl font-thin leading-none tracking-tighter" style="line-height: 120%;">
-                    We are a web development agency specializing in delivering the <span class="bg-underline1 bg-left-bottom bg-no-repeat bg-100% pb-1">best user experience</span> through our leading <span class="bg-underline1 bg-left-bottom bg-no-repeat bg-100% pb-1">front-end expertise</span>.
+                    We are a web development agency specializing in delivering the
+                    <span class="bg-underline1-flip bg-flip-horizontal bg-left-bottom bg-no-repeat bg-100% pb-1">best user experience</span>
+                    through our leading
+                    <span class="bg-underline1 bg-left-bottom bg-no-repeat bg-100% pb-2">front-end expertise</span>.
                   </h2>
                   <p class="mb-8 text-base leading-relaxed text-left text-gray-600 font-montserrat">
                     Themeptation helping enterprises to create great Templates
