--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@
 
         <!-- WHO WE ARE -->
         <section class="bg-white">
-            <div class="2xl:max-w-7xl sm:px-6 md:px-12 lg:px-24 lg:py-24 2xl:px-12 px-4 py-12 mx-auto">
+            <div class="2xl:max-w-7xl sm:px-6 md:px-12 lg:px-24 lg:py-24 2xl:px-12 py-12 mx-auto p-4">
               <div class="2xl:max-w-7xl flex flex-wrap items-center mx-auto">
                 <div class="lg:w-2/5 lg:pr-24 md:mb-0 flex flex-col items-start mb-4 text-left">
                   <!-- <h3 class="text-xl font-bold mb-6 text-indigo-500">WHAT WE DO</h3> -->
@@ -75,197 +75,94 @@
                   <p class="mb-8 text-base leading-relaxed text-left text-gray-600 font-montserrat">
                     Themeptation helping enterprises to create great Templates
                     websites perfectly.
+                    <!-- TECHNOLOGIES LOGOS? -->
                   </p>
-                  <!-- <div class="lg:mt-6 max-w-7xl sm:flex mt-0">
-                    <div class="sm:mt-0 mt-3">
-                      <button class="hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 items-center block px-10 py-4 text-base font-medium text-center text-white transition duration-500 ease-in-out transform bg-indigo-500">
-                        Let's Talk
-                      </button>
-                    </div>
-                  </div> -->
                 </div>
-                <section class="bg-black sectionSize w-screen text-white">
-                    <div>
-                      <h2 class="secondaryTitle bg-underline2 bg-100%">How it works</h2>
-                    </div>
-                    <div class="flex flex-col md:flex-row">
-                      <div class="flex-1 mx-8 flex flex-col items-center my-4">
-                        <div class="border-2 rounded-full bg-secondary text-[#fff] h-12 w-12 flex justify-center items-center mb-3">
-                            🌏
-                        </div>
-                        <h3 class="font-montserrat font-medium text-xl mb-2">Brief</h3>
-                        <p class="text-center font-montserrat">
-                            Every project starts with a clear brief and definition of tasks.
-                        </p>
-                      </div>
-                      <div class="flex-1 mx-8 flex flex-col items-center my-4">
-                        <div class="border-2 rounded-full bg-secondary text-[#fff] h-12 w-12 flex justify-center items-center mb-3">
-                          🛟
-                        </div>
-                        <h3 class="font-montserrat font-medium text-xl mb-2">Estimate</h3>
-                        <p class="text-center font-montserrat">
-                            We estimate the scope of work and enter into a contract with fixed deadlines and deliverables.
-                        </p>
-                      </div>
-                      <div class="flex-1 mx-8 flex flex-col items-center my-4">
-                        <div class="border-2 border-black rounded-full bg-secondary text-[#fff] h-12 w-12 flex justify-center items-center mb-3">
-                          🚧
-                        </div>
-                        <h3 class="font-montserrat font-medium text-xl mb-2">Realisation</h3>
-                        <p class="text-center font-montserrat">
-                            No vague deadlines or inflated hours - just the results you need.
-                        </p>
-                      </div>
-                    </div>
-                  </section>
-
-                  <section class="sectionSize bg-secondary">
-                    <div>
-                      <h2 class="secondaryTitle bg-underline3 bg-100%">Features</h2>
-                    </div>
-                    <div class="md:grid md:grid-cols-2 md:grid-rows-2">
-                
-                      <div class="flex items-start font-montserrat my-6 mr-10">
-                        <img src="favicon.svg" alt="" class="h-7 mr-4">
-                        <div>
-                          <h3 class="font-semibold text-2xl">Feature #1</h3>
-                          <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                            Quisquam voluptate praesentium tenetur earum repellendus! Dicta
-                            culpa consequuntur saepe quibusdam labore, est ex ducimus
-                            tempore, quos illum officiis, pariatur ea placeat.
-                          </p>
-                        </div>
-                      </div>
-                
-                      <div class="flex items-start font-montserrat my-6 mr-10">
-                        <img src="favicon.svg" alt="" class="h-7 mr-4">
-                        <div>
-                          <h3 class="font-semibold text-2xl">Feature #2</h3>
-                          <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                            Quisquam voluptate praesentium tenetur earum repellendus! Dicta
-                            culpa consequuntur saepe quibusdam labore, est ex ducimus
-                            tempore, quos illum officiis, pariatur ea placeat.
-                          </p>
-                        </div>
-                      </div>
-                
-                      <div class="flex items-start font-montserrat my-6 mr-10">
-                        <img src="favicon.svg" alt="" class="h-7 mr-4">
-                        <div>
-                          <h3 class="font-semibold text-2xl">Feature #3</h3>
-                          <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                            Quisquam voluptate praesentium tenetur earum repellendus! Dicta
-                            culpa consequuntur saepe quibusdam labore, est ex ducimus
-                            tempore, quos illum officiis, pariatur ea placeat.
-                          </p>
-                        </div>
-                      </div>
-                
-                      <div class="flex items-start font-montserrat mt-6 mr-10">
-                        <img src="favicon.svg" alt="" class="h-7 mr-4">
-                        <div>
-                          <h3 class="font-semibold text-2xl">Feature #4</h3>
-                          <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                            Quisquam voluptate praesentium tenetur earum repellendus! Dicta
-                            culpa consequuntur saepe quibusdam labore, est ex ducimus
-                            tempore, quos illum officiis, pariatur ea placeat.
-                          </p>
-                        </div>
-                      </div>
-                
-                    </div>
-                  </section>
-                
-                <!-- <div class="lg:w-3/5 xl:mt-0 w-full font-montserrat">
-                  <div class="relative items-center w-full px-5 py-12">
-                    <div class="grid w-full grid-cols-1 gap-12 mx-auto lg:grid-cols-2">
-                      <div class="p-6">
-                        <div class="inline-flex items-center justify-center flex-shrink-0 w-12 h-12 mx-auto mb-5 text-indigo-700 rounded-xl border-2 border-gray-300">
-                          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 icon icon-tabler icon-tabler-aperture" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <circle cx="12" cy="12" r="9"></circle>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(72 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(144 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(216 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(288 12 12)"></line>
-                          </svg>
-                        </div>
-                        <h3 class="mx-auto mb-6 text-xl font-bold leading-none tracking-tighter lg:text-2xl font-pt-serif">
-                            Web Application Development
-                        </h3>
-                        <p class="mx-auto text-base leading-relaxed text-gray-700">
-                            We build highly efficient, scalable and secure web applications for businesses of all sizes. From prototypes to finished products.
-                        </p>
-                      </div>
-                      <div class="p-6">
-                        <div class="inline-flex items-center justify-center flex-shrink-0 w-12 h-12 mx-auto mb-5 text-indigo-700 rounded-xl border-2 border-gray-300">
-                          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 icon icon-tabler icon-tabler-aperture" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <circle cx="12" cy="12" r="9"></circle>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(72 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(144 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(216 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(288 12 12)"></line>
-                          </svg>
-                        </div>
-                        <h3 class="mx-auto mb-6 text-xl font-bold leading-none tracking-tighter lg:text-2xl">
-                          Plugin Development
-                        </h3>
-                        <p class="mx-auto text-base leading-relaxed text-gray-700">
-                          Free and Premium themes, UI Kit's, templates and landing
-                          pages built with Tailwind CSS, HTML &amp; Next.js.
-                        </p>
-                      </div>
-                      <div class="p-6">
-                        <div class="inline-flex items-center justify-center flex-shrink-0 w-12 h-12 mx-auto mb-5 text-indigo-700 rounded-xl border-2 border-gray-300">
-                          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 icon icon-tabler icon-tabler-aperture" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <circle cx="12" cy="12" r="9"></circle>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(72 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(144 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(216 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(288 12 12)"></line>
-                          </svg>
-                        </div>
-                        <h3 class="mx-auto mb-6 text-xl font-bold leading-none tracking-tighter lg:text-2xl">
-                          Core Themeptation
-                        </h3>
-                        <p class="mx-auto text-base leading-relaxed text-gray-700">
-                          Free and Premium themes, UI Kit's, templates and landing
-                          pages built with Tailwind CSS, HTML &amp; Next.js.
-                        </p>
-                      </div>
-                      <div class="p-6">
-                        <div class="inline-flex items-center justify-center flex-shrink-0 w-12 h-12 mx-auto mb-5 text-indigo-700 rounded-xl border-2 border-gray-300">
-                          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 icon icon-tabler icon-tabler-aperture" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <circle cx="12" cy="12" r="9"></circle>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(72 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(144 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(216 12 12)"></line>
-                            <line x1="3.6" y1="15" x2="14.15" y2="15" transform="rotate(288 12 12)"></line>
-                          </svg>
-                        </div>
-                        <h3 class="mx-auto mb-6 text-xl font-bold leading-none tracking-tighter lg:text-2xl">
-                          Core Themeptation
-                        </h3>
-                        <p class="mx-auto text-base leading-relaxed text-gray-700">
-                          Free and Premium themes, UI Kit's, templates and landing
-                          pages built with Tailwind CSS, HTML &amp; Next.js.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div> -->
               </div>
+            </div>
+          </section>
+
+          <!-- SERVICES -->
+          <section class="bg-black sectionSize w-screen text-white">
+            <div>
+              <h2 class="secondaryTitle bg-underline2 bg-contain bg-100%">What we do</h2>
+            </div>
+            <div class="flex flex-col md:flex-row">
+              <div class="flex-1 mx-8 flex flex-col items-center my-4">
+                <div class="border-2 rounded-full bg-secondary text-[#fff] h-12 w-12 flex justify-center items-center mb-3">
+                    🌏
+                </div>
+                <h3 class="font-montserrat font-medium text-center text-xl mb-2">Web Application Development</h3>
+                <p class="text-center font-montserrat">
+                  We build highly efficient, scalable and secure web applications for businesses of all sizes. From prototypes to finished products.
+                </p>
+              </div>
+              <div class="flex-1 mx-8 flex flex-col items-center my-4">
+                <div class="border-2 rounded-full bg-secondary text-[#fff] h-12 w-12 flex justify-center items-center mb-3">
+                  🛟
+                </div>
+                <h3 class="font-montserrat font-medium text-center text-xl mb-2">Optimization and enhancement of existing solutions</h3>
+                <p class="text-center font-montserrat">
+                  If you already have a web application but it requires performance, security or new functionality improvements, our team will audit and suggest specific steps.
+                </p>
+              </div>
+              <div class="flex-1 mx-8 flex flex-col items-center my-4">
+                <div class="border-2 rounded-full bg-secondary text-[#fff] h-12 w-12 flex justify-center items-center mb-3">
+                  🚀
+                </div>
+                <h3 class="font-montserrat font-medium text-center text-xl mb-2">AI implementation</h3>
+                <p class="text-center font-montserrat">
+                  We help you integrate the latest technologies and approaches into your existing products, whether you're migrating to a new platform, modernizing your architecture, or automating processes.
+                </p>
+              </div>
+              <div class="flex-1 mx-8 flex flex-col items-center my-4">
+                <div class="border-2 rounded-full bg-secondary text-[#fff] h-12 w-12 flex justify-center items-center mb-3">
+                  🔎
+                </div>
+                <h3 class="font-montserrat font-medium text-center text-xl mb-2">Auditing and consulting</h3>
+                <p class="text-center font-montserrat">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur earum facilis, iste obcaecati mollitia itaque cupiditate! Earum vel quibusdam error perferendis, molestiae cupiditate. At ex aspernatur nulla praesentium similique! Tempore?
+                </p>
+              </div>
+            </div>
+          </section>
+
+          <section class="sectionSize bg-secondary px-4">
+            <div>
+              <h2 class="secondaryTitle bg-underline3 bg-contain bg-100%">How it works</h2>
+            </div>
+            <div class="md:grid md:grid-cols-2 md:grid-rows-2">
+        
+              <div class="flex items-start font-montserrat my-6 mr-10">
+                <img src="favicon.svg" alt="" class="h-7 mr-4">
+                <div>
+                  <h3 class="font-semibold text-2xl">1. Brief</h3>
+                  <p>
+                    Every project starts with a clear brief and definition of tasks.
+                  </p>
+                </div>
+              </div>
+        
+              <div class="flex items-start font-montserrat my-6 mr-10">
+                <img src="favicon.svg" alt="" class="h-7 mr-4">
+                <div>
+                  <h3 class="font-semibold text-2xl">2. Estimate</h3>
+                  <p>
+                    We estimate the scope of work and enter into a contract with fixed deadlines and deliverables.
+                  </p>
+                </div>
+              </div>
+        
+              <div class="flex items-start font-montserrat my-6 mr-10">
+                <img src="favicon.svg" alt="" class="h-7 mr-4">
+                <div>
+                  <h3 class="font-semibold text-2xl">3. Realization</h3>
+                  <p>
+                    No vague deadlines or inflated hours - just the results you need.
+                  </p>
+                </div>
+              </div>
+        
             </div>
           </section>
         <!-- <div>
