--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,8 +73,8 @@
                     <span class="bg-underline1 bg-left-bottom bg-no-repeat bg-100% pb-2">front-end expertise</span>.
                   </h2>
                   <p class="mb-8 text-base leading-relaxed text-left text-gray-600 font-montserrat">
-                    Themeptation helping enterprises to create great Templates
-                    websites perfectly.
+                    Our team is made up exclusively of senior professionals, each with up to 8 years of proven track record of success in their respective fields.
+                    <!-- We follow an agile model, which means that tasks are estimated in advance, and the project has clearly defined milestones. This approach ensures transparency for our clients and allows our professionals to work efficiently. -->
                     <!-- TECHNOLOGIES LOGOS? -->
                   </p>
                 </div>
@@ -127,6 +127,7 @@
             </div>
           </section>
 
+          <!-- HOW IT WORKS -->
           <section class="sectionSize bg-secondary px-4">
             <div>
               <h2 class="secondaryTitle bg-underline3 bg-contain bg-100%">How it works</h2>
@@ -146,7 +147,7 @@
               <div class="flex items-start font-montserrat my-6 mr-10">
                 <img src="favicon.svg" alt="" class="h-7 mr-4">
                 <div>
-                  <h3 class="font-semibold text-2xl">2. Estimate</h3>
+                  <h3 class="font-semibold text-2xl">Estimate</h3>
                   <p>
                     We estimate the scope of work and enter into a contract with fixed deadlines and deliverables.
                   </p>
@@ -154,9 +155,9 @@
               </div>
         
               <div class="flex items-start font-montserrat my-6 mr-10">
-                <img src="favicon.svg" alt="" class="h-7 mr-4">
+                <div class="font-semibold text-2xl mr-6">3.</div>
                 <div>
-                  <h3 class="font-semibold text-2xl">3. Realization</h3>
+                  <h3 class="font-semibold text-2xl">Realization</h3>
                   <p>
                     No vague deadlines or inflated hours - just the results you need.
                   </p>
@@ -165,12 +166,6 @@
         
             </div>
           </section>
-        <!-- <div>
-            <h3 class="uppercase">WHAT WE DO</h3>
-            <h2>We are a web development agency specializing in delivering the best user experience through our leading front-end expertise.</h2>
-            <p>Our team is made up exclusively of senior professionals, each with a proven track record of success in their respective fields. We follow an agile model, which means that tasks are estimated in advance, and the project has clearly defined milestones. This approach ensures transparency for our clients and allows our professionals to work efficiently.</p>
-            <button class="btn-primary">Let's talk</button>
-        </div> -->
 
         <!-- SERVICES -->
         <!-- <div>
