Done markup for Study cases

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -169,9 +169,9 @@
 
         <!-- STUDY CASES -->
         <section class="px-0 mx-auto max-w-7xl sm:px-4 text-center sectionSize" style="padding-top: 0;padding-bottom: 0;">
-            <div class="py-12 shadow-2xl border border-black bg-black grid items-center grid-cols-1 gap-10 px-4 overflow-hidden text-white rounded-none sm:rounded-lg md:px-10 md:grid-cols-5 lg:gap-0">
+            <div class="py-12 hover:shadow-2xl border border-black bg-black grid items-center grid-cols-1 gap-10 px-4 overflow-hidden text-white rounded-none sm:rounded-lg md:px-10 md:grid-cols-5 lg:gap-0">
                 <div class="col-span-1 md:col-span-3">
-                    <h2 class="secondaryTitle bg-underline2 bg-100%">Study Cases</h2>
+                    <h2 class="secondaryTitle bg-underline2 bg-contain bg-100%">Study Cases</h2>
                     <p class="mb-6 text-sm font-montserrat lg:text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero incidunt consequatur hic! Est deserunt ipsum laboriosam omnis aliquam assumenda vero autem quam libero debitis eius molestiae natus dolores, voluptatum voluptas!</p>
                     <a href="#" class="inline-block mt-2 mx-auto border-2 px-6 py-2 rounded-lg border-white bg-white text-black font-bold">Read blog</a>
                 </div>
