Polish for the build in public

--- a/src/pages/underconstruction.astro
+++ b/src/pages/underconstruction.astro
@@ -1,5 +1,5 @@
 ---
-
+import Disclaimer from '../components/Disclaimer.astro';
 ---
 
 <!doctype html>
@@ -209,7 +209,7 @@
         </section>
 
         <!-- FAQ -->
-        <section class="sectionSize items-start pt-8 md:pt-36 bg-black text-white">
+        <!-- <section class="sectionSize items-start pt-8 md:pt-36 bg-black text-white">
             <div>
                 <h2 class="secondaryTitle bg-highlight3 p-10 mb-0 bg-center bg-100%">
                 FAQ
@@ -255,11 +255,11 @@
             </div>
             <hr class="w-full bg-white">
         
-        </section>
+        </section> -->
 
         <!-- FOOTER -->
         <section class="bg-black sectionSize">
-            <div class="mb-4">
+            <!-- <div class="mb-4">
               <img src="dist/assets/Logo_white.svg" alt="Logo" class="h-4">
             </div>
             <div class="flex mb-8">
@@ -275,19 +275,20 @@
               <a href="#">
                 <img src="dist/assets/logos/Twitter.svg" alt="Twitter logo" class="mx-4">
               </a>
-            </div>
+            </div> -->
             <div class="text-white font-montserrat text-sm">
-              © 2021 STARTUP. All rights reserved
+              © 2024 Artem Palevich. All rights reserved
             </div>
         </section>
-        <footer>
 
+        <footer>
             <!-- Google Tag Manager (noscript) -->
             <noscript>
                 <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGRW3QLF" height="0" width="0" style="display:none;visibility:hidden"></iframe>
             </noscript>
             <!-- End Google Tag Manager (noscript) -->
         </footer>
+        <Disclaimer />
 	</body>
     <style>
         .sectionSize {
