--- a/src/pages/underconstruction.astro
+++ b/src/pages/underconstruction.astro
@@ -1,32 +1,15 @@
 ---
-import Disclaimer from '../components/Disclaimer.astro';
+import GithubWidget from '../components/GithubWidget.astro';
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
-		<!-- Global Metadata -->
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <meta name="generator" content={Astro.generator} />
-        <!-- Google Tag Manager -->
-        <script>
-            (function(w: Window, d: Document, s: string, l: string, i: string){
-                const dataLayer = (w[l] = (w[l] || []) as { [key: string]: any }[]);
-                dataLayer.push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
-                const f = d.getElementsByTagName(s)[0];
-                const j = d.createElement(s) as HTMLScriptElement;
-                const dl = l !== 'dataLayer' ? '&l=' + l : '';
-                j.async = true;
-                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-                f.parentNode.insertBefore(j, f);
-            })(window, document, 'script', 'dataLayer', 'GTM-KGRW3QLF');
-        </script>
-        <!-- End Google Tag Manager -->
+		
 	</head>
 	<body class="font-pt-serif">
 		<header>
-      <Disclaimer />
+      <GithubWidget />
     </header>
         <!-- HERO -->
         <section class="pt-24 md:mt-0 md:h-screen flex flex-col justify-center text-center md:text-left md:flex-row md:justify-between md:items-center lg:px-48 md:px-12 px-4 bg-secondary">
