--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,12 @@
 ---
-
+import BaseHead from '../components/BaseHead.astro';
+import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
-		<!-- Global Metadata -->
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <meta name="generator" content={Astro.generator} />
-        <!-- Google Tag Manager -->
-        <script>
-            (function(w: Window, d: Document, s: string, l: string, i: string){
-                const dataLayer = (w[l] = (w[l] || []) as { [key: string]: any }[]);
-                dataLayer.push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
-                const f = d.getElementsByTagName(s)[0];
-                const j = d.createElement(s) as HTMLScriptElement;
-                const dl = l !== 'dataLayer' ? '&l=' + l : '';
-                j.async = true;
-                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-                f.parentNode.insertBefore(j, f);
-            })(window, document, 'script', 'dataLayer', 'GTM-KGRW3QLF');
-        </script>
-        <!-- End Google Tag Manager -->
+		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
 		<main class="h-screen flex items-center justify-center bg-secondary">
