--- a/src/components/GithubWidget.astro
+++ b/src/components/GithubWidget.astro
@@ -1,4 +1,4 @@
-<pre id="message">Loading...</pre>
+<pre id="message" class="fixed bg-white hidden md:block">Loading...</pre>
 
 <script>
 fetch('https://api.github.com/repos/apalevich/apalevich%2Epro/commits?per_page=3')
