--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,35 @@ body {
 
 @layer components {
 	.sectionSize {
-		@apply flex flex-col items-center px-4 pt-14 pb-14 md:px-12 lg:px-48;
+	  @apply lg:px-48 md:px-12 px-4 py-14 flex flex-col items-center;
+	}
+	.secondaryTitle {
+	  @apply font-pt-serif text-3xl bg-left-bottom bg-no-repeat pb-8 px-16 mb-8;
 	}
   }
+  
+  .growing-underline {
+	display: block;
+	position: relative;
+	padding: 0.2em 0;
+	overflow: hidden;
+  }
+  
+  .growing-underline::after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 0.1em;
+	background-color: black;
+	transition: opacity 300ms, transform 300ms;
+	opacity: 1;
+	transform: translate3d(-100%, 0, 0);
+  }
+  
+  .growing-underline:hover::after,
+  .growing-underline:focus::after {
+	transform: translate3d(0, 0, 0);
+  }
+  
