--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -5,20 +5,26 @@ import Highlight1 from '../images/Highlight1.svg'
 import Highlight2 from '../images/Highlight2.svg'
 ---
 <section
-    class="pt-24 md:mt-0 md:h-screen flex flex-col justify-center text-center md:text-left md:flex-row md:justify-between md:items-center lg:px-48 md:px-12 px-4 bg-secondary">
+    class="pt-24 md:mt-0 md:h-screen flex flex-col justify-center text-center md:text-left md:flex-row md:justify-between md:items-center lg:px-48 md:px-12 px-4 bg-secondary md:gap-4 sectionSize">
     <div class="md:flex-1 md:mr-10">
-      <h1 class="font-pt-serif text-5xl font-bold mb-7 capitalize">
+      <h1 class="font-pt-serif text-5xl md:text-5xl font-bold mb-7 capitalize">
         Web development with
         <span class="bg-underline1 bg-left-bottom bg-no-repeat bg-100%">
             results
         </span>
-        at the forefront
+        at the&nbsp;forefront
       </h1>
-      <p class="font-pt-serif font-normal mb-7">
-        We deliver clear and measurable projects where quality is more important than hours.
+      <p class="font-pt-serif text-lg md:text-md font-normal mb-7 md:pr-6">
+        <!-- We deliver clear and measurable projects where quality is more important than hours. -->
+        We are a web development agency that delivers clear
+        <!-- <br class="hidden md:block"> -->
+        and measurable projects where quality is more important
+        <!-- <br class="hidden md:block"> -->
+        than hours through our 
+        <span class="bg-underline1-flip bg-left-bottom bg-no-repeat bg-100% pb-2">Front&#8209;End&nbsp;expertise</span>
       </p>
-      <div class="font-montserrat">
-        <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-2 mb-2">
+      <div class="font-montserrat mb-4">
+        <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-4 mb-2">
             Let's talk
         </button>
         <button class="px-6 py-4 border-2 border-black border-solid rounded-lg text-black">
@@ -31,15 +37,15 @@ import Highlight2 from '../images/Highlight2.svg'
             <Picture
                 src={Highlight1}
                 format='svg'alt="Hightlight decoration"
-                class='absolute -top-24 left-12'    
+                class='absolute -top-24 left-12'
             />
         </div>
         <Picture
             formats={['webp', 'jpg']}
             src={heroImage}
             alt="Artem Palevich works at computer"
-            class="rotate-6 mx-auto shadow-xl"
-            width={heroImage.width/2} height={heroImage.height/2}
+            class="rotate-3 md:rotate-6 mx-auto shadow-xl"
+            width={heroImage.width*0.75} height={heroImage.height*0.75}
         />
         <div class="relative">
             <Picture
