--- a/src/pages/underconstruction.astro
+++ b/src/pages/underconstruction.astro
@@ -1,10 +1,14 @@
 ---
 import GithubWidget from '../components/GithubWidget.astro';
 import HeroSection from '../components/HeroSection.astro';
+import AboutSection from '../components/AboutSection.astro';
 import BaseHead from '../components/BaseHead.astro';
 import BaseFooter from '../components/BaseFooter.astro';
 
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+
+import { Picture } from "astro:assets"
+import AstroLogo from '../images/logos/astro-logo-dark.svg'
 ---
 
 <!doctype html>
@@ -17,28 +21,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
       <GithubWidget />
     </header>
       <HeroSection />
-
-        <!-- WHO WE ARE -->
-        <section class="bg-white">
-            <div class="2xl:max-w-7xl sm:px-6 md:px-12 lg:px-24 lg:py-24 2xl:px-12 py-12 mx-auto p-4">
-              <div class="2xl:max-w-7xl flex flex-wrap items-center mx-auto">
-                <div class="lg:w-2/5 lg:pr-24 md:mb-0 flex flex-col items-start mb-4 text-left">
-                  <!-- <h3 class="text-xl font-bold mb-6 text-indigo-500">WHAT WE DO</h3> -->
-                  <h2 class="text-gray-900 md:text-5xl lg:text-7xl mb-8 text-3xl font-thin leading-none tracking-tighter" style="line-height: 120%;">
-                    We are a web development agency specializing in delivering the
-                    <span class="bg-underline1-flip bg-flip-horizontal bg-left-bottom bg-no-repeat bg-100% pb-1">best user experience</span>
-                    through our leading
-                    <span class="bg-underline1 bg-left-bottom bg-no-repeat bg-100% pb-2">front-end expertise</span>.
-                  </h2>
-                  <p class="mb-8 text-base leading-relaxed text-left text-gray-600 font-montserrat">
-                    Our team is made up exclusively of senior professionals, each with up to 8 years of proven track record of success in their respective fields.
-                    <!-- We follow an agile model, which means that tasks are estimated in advance, and the project has clearly defined milestones. This approach ensures transparency for our clients and allows our professionals to work efficiently. -->
-                    <!-- TECHNOLOGIES LOGOS? -->
-                  </p>
-                </div>
-              </div>
-            </div>
-          </section>
+        
 
           <!-- SERVICES -->
           <section class="bg-black sectionSize w-screen text-white">
@@ -87,6 +70,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
           <!-- HOW IT WORKS -->
           <section class="sectionSize bg-secondary px-4">
+            <p class="mb-8 text-base leading-relaxed text-left text-gray-600 font-montserrat ">
+              Our team is made up exclusively of senior professionals, each with up to 8 years of proven track record of success in their respective fields.
+            </p>
             <div>
               <h2 class="secondaryTitle bg-underline3 bg-contain bg-100%">How it works</h2>
             </div>
@@ -123,6 +109,44 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
               </div>
         
             </div>
+            <!-- <p class="mb-8 text-base leading-relaxed text-left text-gray-600 font-montserrat">
+              We follow an agile model, which means that tasks are estimated in advance, and the project has clearly defined milestones. This approach ensures transparency for our clients and allows our professionals to work efficiently.
+            </p> -->
+            <h3 class="text-xl font-bold my-6 opacity-30 capitalize">Our favorite technologies:</h3>
+        <div class="flex flex-wrap md:flex-nowrap">
+            <!-- TECHNOLOGIES LOGOS
+            https://astro.build/press/
+            https://en.m.wikipedia.org/wiki/File:Tailwind_CSS_logo.svg
+            vue
+            react
+            next
+            nuxt
+            -->
+            <Picture
+                src={AstroLogo}
+                alt="Logo of Astro framework"
+            />
+            <Picture
+                src={AstroLogo}
+                alt="Logo of Astro framework"
+            />
+            <Picture
+                src={AstroLogo}
+                alt="Logo of Astro framework"
+            />
+            <Picture
+                src={AstroLogo}
+                alt="Logo of Astro framework"
+            />
+            <Picture
+                src={AstroLogo}
+                alt="Logo of Astro framework"
+            />
+            <Picture
+                src={AstroLogo}
+                alt="Logo of Astro framework"
+            />
+        </div>
           </section>
 
         <!-- STUDY CASES -->
