Make Hero photo overlap the following section (mobile)

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -44,7 +44,7 @@ import Highlight2 from '../images/Highlight2.svg'
             formats={['webp', 'jpg']}
             src={heroImage}
             alt="Artem Palevich works at computer"
-            class="rotate-3 md:rotate-6 mx-auto shadow-xl"
+            class="rotate-3 md:rotate-6 mx-auto shadow-xl -mb-16 md:mb-0"
             width={heroImage.width*0.75} height={heroImage.height*0.75}
         />
         <div class="relative">
