Remove GTM from dev mode

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -45,15 +45,18 @@ const { title, description, image = '/blog-placeholder-about.jpg' } = Astro.prop
 
 <!-- Google Tag Manager -->
 <script>
-	(function(w: Window, d: Document, s: string, l: string, i: string){
-		const dataLayer = (w[l] = (w[l] || []) as { [key: string]: any }[]);
-		dataLayer.push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
-		const f = d.getElementsByTagName(s)[0];
-		const j = d.createElement(s) as HTMLScriptElement;
-		const dl = l !== 'dataLayer' ? '&l=' + l : '';
-		j.async = true;
-		j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-		f.parentNode.insertBefore(j, f);
-	})(window, document, 'script', 'dataLayer', 'GTM-KGRW3QLF');
+	{import.meta.env.PROD && (() => {
+		const initializeGTM = (w: Window, d: Document, s: string, l: string, i: string) => {
+			const dataLayer = (w[l] = (w[l] || []) as { [key: string]: any }[]);
+			dataLayer.push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+			const firstScript = d.getElementsByTagName(s)[0];
+			const scriptElement = d.createElement(s) as HTMLScriptElement;
+			const dataLayerParam = l !== 'dataLayer' ? `&l=${l}` : '';
+			scriptElement.async = true;
+			scriptElement.src = `https://www.googletagmanager.com/gtm.js?id=${i}${dataLayerParam}`;
+			firstScript.parentNode?.insertBefore(scriptElement, firstScript);
+		};
+		initializeGTM(window, document, 'script', 'dataLayer', 'GTM-KGRW3QLF');
+	})()}
 </script>
 <!-- End Google Tag Manager -->
