Fix heading issue

--- a/src/components/TestimonialSection.astro
+++ b/src/components/TestimonialSection.astro
@@ -18,8 +18,10 @@ const content: contentItem[] = [
 ];
 ---
 <section class="py-10 md:py-16 sectionSize text-center">
-    <div class="container max-w-screen-xl mx-auto px-4">
-        <h2 class="secondaryTitle bg-underline2 bg-100%">Testimonial</h2>
+    <div class="max-w-screen-xl mx-auto px-4">
+        <div class="">
+            <h2 class="secondaryTitle bg-underline2 bg-100%">Testimonial</h2>
+        </div>
 
         <!-- <p class="font-normal text-gray-500 text-xs md:text-base mb-10 md:mb-20">
             We are proud to work with our clients
